--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     },
     "autoload": {
         "psr-4": {
-            "lyt8384\\pingpp\\": "src/"
+            "lyt8384\\pingpp\\": "/"
         }
     }
 }
